Fix left alignment of TransportTime icon on ResultsListPage

--- a/src/pages/ResultsListPage.scss
+++ b/src/pages/ResultsListPage.scss
@@ -66,6 +66,11 @@
         font-size: 14px !important;
         text-align: center;
     }
+
+    .TransportTime .ColoredIcon {
+        left: -27px;
+    }
+
 }
 
 .homeLink {
